# codex

./: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  MILESTONE_6_CODEX.md  MILESTONE_6_DASHBOARD.md  MILESTONE_6_FRONTEND.md  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
examples/demo_repo/: calculator.py  data_pipeline.py  hello.py  text_utils.py
frontend/: app.js  index.html  package-lock.json  package.json  style.css  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnswerPanel.jsx  Logo.jsx  QueryHistory.jsx  QueryInput.jsx  SourceCard.jsx  ThemeToggle.jsx
frontend/src/styles/: index.css
src/codebase_qa/: __init__.py  api.py  chunking.py  cli.py  embeddings.py  ingest.py  qa.py  vectorstore.py
tests/: test_api.py  test_chunking.py  test_ingest.py  test_qa.py  test_vectorstore.py
