[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "codebase-qa"
version = "0.1.0"
description = "CLI tool to index a codebase and answer questions about it using RAG + Claude"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "chromadb>=0.5",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
codebase-qa = "codebase_qa.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
