[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-qa"
version = "0.1.0"
description = "CLI tool to index a codebase and answer questions about it using RAG + Claude"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "chromadb>=0.5",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",        # FastAPI TestClient
    "fastapi>=0.111",     # needed to import api.py in tests
]

[project.scripts]
codebase-qa = "codebase_qa.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 70
